--- a/no.sintef.autorealspl.converter.parent/no.sintef.autorealspl.converter/pom.xml
+++ b/no.sintef.autorealspl.converter.parent/no.sintef.autorealspl.converter/pom.xml
@@ -2,11 +2,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>no.sintef.autorealspl</groupId>
   <artifactId>no.sintef.autorealspl.converter</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+	<parent>
+        <groupId>no.sintef.autorealspl</groupId>
+        <artifactId>no.sintef.autorealspl.converter.root</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>..</relativePath>
+    </parent>
+  
   <name>no.sintef.autorealspl.converter</name>
   <url>http://maven.apache.org</url>
 
@@ -19,9 +24,9 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-      <scope>test</scope>
+      <!-- <scope>test</scope> -->
     </dependency>
-    
+	
     <!-- to install this dependency in the local repository mvn install  https://github.com/SINTEF-9012/bvr/tree/master/no.sintef.bvr.model-->
     <dependency>
       <groupId>no.sintef.bvr</groupId>
@@ -34,5 +39,25 @@
       <artifactId>no.sintef.xtext.dsl.operator</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
+    
+    <dependency>
+      <groupId>no.sintef.autorealspl</groupId>
+      <artifactId>no.sintef.autorealspl.converter.interfaces</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
+  
+  <build>
+        <sourceDirectory>src</sourceDirectory>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
