separate module for test cases

--- a/no.sintef.autorealspl.converter.parent/pom.xml
+++ b/no.sintef.autorealspl.converter.parent/pom.xml
@@ -27,5 +27,6 @@
     <modules>
         <module>no.sintef.autorealspl.converter</module>
         <module>no.sintef.autorealspl.converter.interfaces</module>
+		<module>no.sintef.autorealspl.converter.test</module>
     </modules>
 </project>
