--- a/no.sintef.autorealspl.converter.parent/no.sintef.autorealspl.converter/pom.xml
+++ b/no.sintef.autorealspl.converter.parent/no.sintef.autorealspl.converter/pom.xml
@@ -45,6 +45,30 @@
       <artifactId>no.sintef.autorealspl.converter.interfaces</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    
+        <dependency>
+		<groupId>no.sintef.bvr</groupId>
+		<artifactId>no.sintef.bvr.model</artifactId>
+		<version>2.0.0-SNAPSHOT</version>    	
+    </dependency>
+        
+	<dependency>
+		<groupId>org.eclipse.maven</groupId>
+		<artifactId>org.eclipse.emf.ecore</artifactId>
+		<version>3.8.0</version>
+	</dependency>
+        
+	<dependency>
+		<groupId>org.eclipse.maven</groupId>
+		<artifactId>org.eclipse.emf.common</artifactId>
+		<version>3.8.0</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.eclipse.maven</groupId>
+		<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
+		<version>3.8.0</version>
+	</dependency>
   </dependencies>
   
   <build>
