--- a/no.sintef.autorealspl.converter.parent/no.sintef.autorealspl.converter/pom.xml
+++ b/no.sintef.autorealspl.converter.parent/no.sintef.autorealspl.converter/pom.xml
@@ -69,6 +69,12 @@
 		<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
 		<version>3.8.0</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>org.eclipse.xtext</groupId>
+		<artifactId>org.eclipse.xtext</artifactId>
+		<version>2.9.2</version>
+</dependency>
   </dependencies>
   
   <build>
