--- a/no.sintef.autorealspl.converter.parent/no.sintef.autorealspl.converter/pom.xml
+++ b/no.sintef.autorealspl.converter.parent/no.sintef.autorealspl.converter/pom.xml
@@ -74,7 +74,13 @@
 		<groupId>org.eclipse.xtext</groupId>
 		<artifactId>org.eclipse.xtext</artifactId>
 		<version>2.9.2</version>
-</dependency>
+	</dependency>
+	
+	<dependency>
+		<groupId>com.google.inject</groupId>
+		<artifactId>guice</artifactId>
+		<version>4.0</version>
+	</dependency>
   </dependencies>
   
   <build>
