--- a/Planner/pom.xml
+++ b/Planner/pom.xml
@@ -12,6 +12,16 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+         <dependency>
+        	<groupId>no.sintef.autorealspl</groupId>
+        	<artifactId>no.sintef.autorealspl.converter</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>no.sintef.autorealspl</groupId>
+        	<artifactId>no.sintef.autorealspl.converter.interfaces</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
