Fixing the POM file so it includes the version number in the JAR manifest file

--- a/Planner/pom.xml
+++ b/Planner/pom.xml
@@ -40,6 +40,7 @@
                     <archive>
                         <manifest>
                             <mainClass>no.sintef.bvr.planner.ui.Controller</mainClass>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
                     </archive>
                     <descriptorRefs>
